--- a/testing/index.html
+++ b/testing/index.html
@@ -23,6 +23,7 @@
         <link rel="stylesheet" href="css/dark/emulator-dark.css">
         <link rel="stylesheet" href="css/dark/changelog-dark.css">
         <link rel="stylesheet" href="css/dark/arcade-dark.css">
+        <link rel="stylesheet" href="css/dark/importer-dark.css">
 
         <link rel="stylesheet" href="js/treejs/treejs.css" />
 
@@ -37,6 +38,7 @@
             <button id="IDChnagelogExitBtn" class="changelog_exit_btn" uk-icon="icon: close"></button>
             <div id="IDChangelogText" class="changelog_text"></div>
         </div>
+
 
         <div id="IDPageWrapper" class="page_wrapper">
             <div id="IDPageHeader" class="header">
@@ -54,13 +56,15 @@
 
                         <button id="IDConnectThumbyBTN" title="Connect Thumby to page manually, or automatically if connected before" class="uk-button uk-button-secondary uk-width-1-1 uk-height-1-1 uk-text-small uk-text-nowrap" uk-icon="shrink">Connect Thumby</button>
                         <button id="IDDisconnectThumbyBTN" title="Disconnect Thumby from page" class="uk-button uk-button-secondary uk-width-1-1 uk-height-1-1 uk-text-small uk-text-nowrap" uk-icon="expand">Disconnect Thumby</button>
-                        <button id="IDNewGameBTN" title="Generates file structure needed for getting a game to show up on the Thumby start-up screen" class="uk-button uk-button-secondary uk-width-1-1 uk-height-1-1 uk-text-small uk-text-nowrap">Make New Game</button>
+
+                        <button id="IDImportSpriteBTN" title="" class="uk-button uk-button-secondary uk-width-1-1 uk-height-1-1 uk-text-small uk-text-nowrap">Import Sprite</button>
 
                         <button id="IDArcadeBTN" title="Opens overlay for browsing community made games" class="uk-button uk-button-secondary uk-width-1-1 uk-height-1-1 uk-text-small uk-text-nowrap">Arcade</button>
 
                         <button id="IDUtilites" title="Common utilities for firmware, page layout, page state, theme, and widgets" class="uk-button uk-button-secondary uk-width-1-1 uk-height-1-1 uk-text-small uk-text-nowrap" type="button">Utilities&#9662</button>
                         <div id="IDUtilitesDropdown" uk-dropdown="offset: 0; mode: click; delay-hide: 200">
                             <ul class="uk-nav uk-dropdown-nav">
+                                <li><button id="IDNewGameBTN" title="Generates file structure needed for getting a game to show up on the Thumby start-up screen" class="uk-button uk-button-secondary uk-width-1-1 uk-height-1-1">Make New Game</button></li>
                                 <li><button title="Downloads firmware for reformatting Thumby, follow the below steps &#10; 1. Turn on Thumby &#10; 2. Hold down bottom-left or down d-pad button &#10; 3. Turn Thumby back off while holding button, keep holding for 3s &#10; 4. Turn Thumby back on and release button &#10; 5. Download firmware .uf2 file by clicking this button &#10; 6. Drag .uf2 file to Thumby RP2040 volume using a file explorer &#10; 7. Press 'Format' in the filesystem widget" onclick="window.open('https://micropython.org/resources/firmware/rp2-pico-20210902-v1.17.uf2');" class="uk-button uk-button-secondary uk-width-1-1 uk-height-1-1">Download Firmware</button></li>
                                 <li><button title="Resets all widget positions, refreshes page" id="IDResetLayoutBTN" class="uk-button uk-button-secondary uk-width-1-1 uk-height-1-1">Reset Layout</button></li>
                                 <li><button title="Erases/closes all editors and bitmap builder then refreshes page" id="IDHardResetBTN" class="uk-button uk-button-secondary uk-width-1-1 uk-height-1-1">Hard Reset Page</button></li>
@@ -81,7 +85,6 @@
                                         <li><button title="Adds a emulator panel (only one can be open at a time)" id="IDAddEmulator" class="uk-button uk-button-secondary uk-width-1-1 uk-height-1-1 uk-text-nowrap uk-text-left">+ Emulator</button></li>
                                     </ul>
                                 </div>
-
                             </ul>
                         </div>
                     </div>
@@ -93,7 +96,7 @@
                         <button title="Opens link in new tab" onclick="window.open('https://github.com/TinyCircuits/tinycircuits.github.io/blob/master/ThumbyAPI.md', '_blank');" class="uk-button-default uk-link-text uk-width-1-1 uk-height-1-1 button_link">Thumby API</button>
                         <button title="Opens link in new tab" onclick="window.open('https://github.com/TinyCircuits/TinyCircuits-Thumby-Games', '_blank');" class="uk-button-default uk-link-text uk-width-1-1 uk-height-1-1 button_link">Add Game To Arcade</button>
 
-                        <button class="uk-button-default uk-link-text uk-width-1-1 uk-height-1-1" type="button">Other Links&#9662</button>
+                        <button class="uk-button-default uk-link-text uk-width-1-1 uk-height-1-1 button_link" type="button">Other Links&#9662</button>
                         <div uk-dropdown="offset: 0; delay-hide: 200">
                             <ul class="uk-nav uk-dropdown-nav">
                                 <button title="Opens link in new tab" onclick="window.open('https://thumby.us/', '_blank');" class="uk-button-default uk-link-text uk-width-1-1 uk-height-1-1 button_link" style="height:40px">Thumby Website</button>
@@ -103,7 +106,7 @@
                                 <li><button title="Opens link in new tab" onclick="window.open('https://tinycircuits.com/pages/contact-us', '_blank');" class="uk-button-default uk-link-text uk-width-1-1 uk-height-1-1 button_link" style="height:40px">Contact Us</button></li>
                             </ul>
                         </div>
-                        <button class="uk-button-default uk-link-text uk-width-1-1 uk-height-1-1">Version: 11.23.2021_1</button>
+                        <button class="uk-button-default uk-link-text uk-width-1-1 uk-height-1-1">Version: 12.8.2021_1</button>
 
                     </div>
                 </div>
@@ -119,7 +122,6 @@
 
         <script type="module" src="rp2040js/dist/esm/rp2040.js"></script>
         <script src="js/load-file-gen.js"></script>
-        <script type="module" src="js/emulator_wrapper.js"></script>
         <script src="uikit-3.7.3/js/uikit.min.js"></script>
         <script src="uikit-3.7.3/js/uikit-icons.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/uikit@3.7.3/dist/js/uikit-icons.min.js"></script>
@@ -135,6 +137,7 @@
         <script src="js/bitmap_builder.js"></script>
         <script src="js/repl.js"></script>
         <script src="js/arcade.js"></script>
+        <script src="js/importer.js"></script>
         <script type="module" src="golden-layout/bundle/esm/golden-layout.js"></script>
         <script type="module" src="js/main.js"></script>
     </body>
