--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Thumby Web IDE</title>
+    <title>Thumby Code Editor</title>
 
         <link rel="stylesheet" href="uikit-3.7.3/css/uikit-dark.css" />
 
