--- a/index.html
+++ b/index.html
@@ -94,12 +94,13 @@
                     <div class="uk-button-group uk-width-1-1 uk-height-1-1">
                         <button title="Opens link in new tab" onclick="window.open('https://thumby.us/Code-Editor/Get-Started/', '_blank');" class="uk-button-default uk-link-text uk-width-1-1 uk-height-1-1 button_link">Tutorial</button>
                         <button title="Opens link in new tab" onclick="window.open('https://thumby.us/API/Get-Started/', '_blank');" class="uk-button-default uk-link-text uk-width-1-1 uk-height-1-1 button_link">Thumby API</button>
-                        <button title="Opens link in new tab" onclick="window.open('https://github.com/TinyCircuits/TinyCircuits-Thumby-Games', '_blank');" class="uk-button-default uk-link-text uk-width-1-1 uk-height-1-1 button_link">Add Game To Arcade</button>
+                        <button title="Opens link in new tab" onclick="window.open('https://thumby.us/Code-Editor/Submit-Game/', '_blank');" class="uk-button-default uk-link-text uk-width-1-1 uk-height-1-1 button_link">Add Game To Arcade</button>
 
                         <button class="uk-button-default uk-link-text uk-width-1-1 uk-height-1-1 button_link" type="button">Other Links&#9662</button>
                         <div uk-dropdown="offset: 0; delay-hide: 200">
                             <ul class="uk-nav uk-dropdown-nav">
                                 <button title="Opens link in new tab" onclick="window.open('https://thumby.us/', '_blank');" class="uk-button-default uk-link-text uk-width-1-1 uk-height-1-1 button_link" style="height:40px">Thumby Website</button>
+                                <li><button title="Visit our Discord server!" onclick="window.open('https://discord.gg/BRHqbjfvYQ', '_blank');" class="uk-button-default uk-link-text uk-width-1-1 uk-height-1-1 button_link" style="height:40px">Discord</button></li>
                                 <li><button title="Opens link in new tab. Found a bug with the page? Report it!" onclick="window.open('https://github.com/TinyCircuits/tinycircuits.github.io/issues', '_blank');" class="uk-button-default uk-link-text uk-width-1-1 uk-height-1-1 button_link" style="height:40px">Report a bug</button></li>
                                 <li><button title="Opens link to new tab" onclick="window.open('https://github.com/TinyCircuits/tinycircuits.github.io/blob/master/CHANGELOG.txt', '_blank');" class="uk-button-default uk-link-text uk-width-1-1 uk-height-1-1 button_link" style="height:40px">Changelog</button></li>
                                 <li><button title="Opens link in new tab" onclick="window.open('http://forum.tinycircuits.com/index.php', '_blank');" class="uk-button-default uk-link-text uk-width-1-1 uk-height-1-1 button_link" style="height:40px">Forums</button></li>
@@ -107,7 +108,7 @@
                                 <li><button title="Opens link in new tab" onclick="window.open('https://tinycircuits.com/pages/contact-us', '_blank');" class="uk-button-default uk-link-text uk-width-1-1 uk-height-1-1 button_link" style="height:40px">Contact Us</button></li>
                             </ul>
                         </div>
-                        <button class="uk-button-default uk-link-text uk-width-1-1 uk-height-1-1">Version: 03.09.2022_1</button>
+                        <button class="uk-button-default uk-link-text uk-width-1-1 uk-height-1-1">Version: 03.10.2022_1</button>
 
                     </div>
                 </div>
