Add version string to files

--- a/index.html
+++ b/index.html
@@ -7,25 +7,25 @@
 
     <title>Thumby Code Editor</title>
 
-        <link rel="stylesheet" href="uikit-3.7.3/css/uikit-dark.css" />
+        <link rel="stylesheet" href="uikit-3.7.3/css/uikit-dark.css?version=16" />
 
 
-        <link rel="stylesheet" href="js/xterm/css/xterm.css"/>
-        <link rel="stylesheet" href="golden-layout/css/goldenlayout-base.css">
-        <link rel="stylesheet" href="golden-layout/css/themes/goldenlayout-dark-theme.css">
+        <link rel="stylesheet" href="js/xterm/css/xterm.css?version=16"/>
+        <link rel="stylesheet" href="golden-layout/css/goldenlayout-base.css?version=16">
+        <link rel="stylesheet" href="golden-layout/css/themes/goldenlayout-dark-theme.css?version=16">
 
-        <link rel="stylesheet" href="css/dark/main-dark.css">
-        <link rel="stylesheet" href="css/dark/fs-dark.css">
-        <link rel="stylesheet" href="css/dark/dir_chooser-dark.css">
-        <link rel="stylesheet" href="css/dark/bitmap_builder-dark.css">
-        <link rel="stylesheet" href="css/dark/shell-dark.css">
-        <link rel="stylesheet" href="css/dark/editor-dark.css">
-        <link rel="stylesheet" href="css/dark/emulator-dark.css">
-        <link rel="stylesheet" href="css/dark/changelog-dark.css">
-        <link rel="stylesheet" href="css/dark/arcade-dark.css">
-        <link rel="stylesheet" href="css/dark/importer-dark.css">
+        <link rel="stylesheet" href="css/dark/main-dark.css?version=16">
+        <link rel="stylesheet" href="css/dark/fs-dark.css?version=16">
+        <link rel="stylesheet" href="css/dark/dir_chooser-dark.css?version=16">
+        <link rel="stylesheet" href="css/dark/bitmap_builder-dark.css?version=16">
+        <link rel="stylesheet" href="css/dark/shell-dark.css?version=16">
+        <link rel="stylesheet" href="css/dark/editor-dark.css?version=16">
+        <link rel="stylesheet" href="css/dark/emulator-dark.css?version=16">
+        <link rel="stylesheet" href="css/dark/changelog-dark.css?version=16">
+        <link rel="stylesheet" href="css/dark/arcade-dark.css?version=16">
+        <link rel="stylesheet" href="css/dark/importer-dark.css?version=16">
 
-        <link rel="stylesheet" href="js/treejs/treejs.css" />
+        <link rel="stylesheet" href="js/treejs/treejs.css?version=16" />
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -149,25 +149,25 @@
             </div>
         </div>
 
-        <script type="module" src="rp2040js/dist/esm/rp2040.js"></script>
-        <script src="js/load-file-gen.js"></script>
+        <script type="module" src="rp2040js/dist/esm/rp2040.js?version=16"></script>
+        <script src="js/load-file-gen.js?version=16"></script>
         <script src="uikit-3.7.3/js/uikit.min.js"></script>
         <script src="uikit-3.7.3/js/uikit-icons.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/uikit@3.7.3/dist/js/uikit-icons.min.js"></script>
-        <script src="js/treejs/tree.js"></script>
-        <script src="js/xterm-addon-fit/lib/xterm-addon-fit.js"></script>
-        <script src="js/ace/ace.js" type="text/javascript" charset="utf-8"></script>
-        <script src="js/ace/ext-language_tools.js"></script>
-        <script src="js/editor_wrapper.js"></script>
-        <script src="js/filesystem_wrapper.js"></script>
-        <script src="js/dir_chooser.js"></script>
-        <script src="js/xterm/lib/xterm.js"></script>
-        <script src="js/active_terminal_wrapper.js"></script>
-        <script src="js/bitmap_builder.js"></script>
-        <script src="js/repl.js"></script>
-        <script src="js/arcade.js"></script>
-        <script src="js/importer.js"></script>
-        <script type="module" src="golden-layout/bundle/esm/golden-layout.js"></script>
-        <script type="module" src="js/main.js"></script>
+        <script src="js/treejs/tree.js?version=16"></script>
+        <script src="js/xterm-addon-fit/lib/xterm-addon-fit.js?version=16"></script>
+        <script src="js/ace/ace.js?version=16" type="text/javascript" charset="utf-8"></script>
+        <script src="js/ace/ext-language_tools.js?version=16"></script>
+        <script src="js/editor_wrapper.js?version=16"></script>
+        <script src="js/filesystem_wrapper.js?version=16"></script>
+        <script src="js/dir_chooser.js?version=16"></script>
+        <script src="js/xterm/lib/xterm.js?version=16"></script>
+        <script src="js/active_terminal_wrapper.js?version=16"></script>
+        <script src="js/bitmap_builder.js?version=16"></script>
+        <script src="js/repl.js?version=16"></script>
+        <script src="js/arcade.js?version=16"></script>
+        <script src="js/importer.js?version=16"></script>
+        <script type="module" src="golden-layout/bundle/esm/golden-layout.js?version=16"></script>
+        <script type="module" src="js/main.js?version=16"></script>
     </body>
 </html>
