Added "secret" Grayscale Bitmap Builder. Shhh...
- The widget launcher button is hidden by default.
- Activates when any Editor has path set to */thumbyGrayscale.py
- Compatible with thumbyGrayscale v3.0.0.
- Outputs two bitmaps.
- The first bitmap is compatible with both thumbyGraphics and thumbyGrayscale.
- The additional second bitmap (bitmapSHD) enables grayscale in thumbyGrayscale.
- Adds js/grayscale_builder.js which is a minimally changed copy of js/bitmap_builder.js
- Differences to Bitmap Builder include:
-- Zoom buttons combined together into a double button.
-- 4 color picker palette added to widget space made.
-- Image import support grayscale (basic without dithering).
-- Import/Export behavior changed as appropriate.
-- Invert behavior supports grayscale.
-- Data storage unique naming to avoid data collisions with Bitmap Builder.
- A Bitmap Builder and a Grayscale Builder widget can be open simultaneously.

--- a/index.html
+++ b/index.html
@@ -113,6 +113,8 @@
                                         <!-- <li class="uk-nav-divider"></li> -->
                                         <li><button title="Adds a bitmap builder panel (only one can be open at a time)" id="IDAddBitmapBuilder" class="uk-button uk-button-secondary uk-width-1-1 uk-height-1-1 uk-text-nowrap uk-text-left">+ Bitmap Builder</button></li>
                                         <!-- <li class="uk-nav-divider"></li> -->
+                                        <li><button title="Adds a grayscale bitmap builder panel (only one can be open at a time)" id="IDAddGrayscaleBuilder" class="uk-button uk-button-secondary uk-width-1-1 uk-height-1-1 uk-text-nowrap uk-text-left" hidden>+ Grayscale Builder</button></li>
+                                        <!-- <li class="uk-nav-divider"></li> -->
                                         <li><button title="Adds a filesystem panel (only one can be open at a time)" id="IDAddFS" class="uk-button uk-button-secondary uk-width-1-1 uk-height-1-1 uk-text-nowrap uk-text-left">+ Filesystem</button></li>
                                         <!-- <li class="uk-nav-divider"></li> -->
                                         <li><button title="Adds a shell panel (only one can be open at a time)" id="IDAddShell" class="uk-button uk-button-secondary uk-width-1-1 uk-height-1-1 uk-text-nowrap uk-text-left">+ Shell</button></li>
@@ -173,6 +175,7 @@
         <script src="js/xterm/lib/xterm.js?version=19"></script>
         <script src="js/active_terminal_wrapper.js?version=19"></script>
         <script src="js/bitmap_builder.js?version=19"></script>
+        <script src="js/grayscale_builder.js?version=19"></script>
         <script src="js/repl.js?version=19"></script>
         <script src="js/arcade.js?version=19"></script>
         <script src="js/importer.js?version=19"></script>
