Blockly integration as alternate Editor mode.
Includes blocks for all of the ThumbyAPI.
Blockly Editors launched separately from the Widgets menu.
HelloBlockly default code shows when opening empty Blockly Editors.
OPEN PYTHON button opens new MicroPython Editor with generated code.
Integration into BitmapBuilder's Import/Export.
Sprite images show on [load sprite] blocks.
Not directly compatible with IMPORT SPRITE.
Editor mode picker for when opening webpage for the first time or after
  a Hard Reset (select between Blockly or MicroPython for the first editor.
'New Tab' (MicroPython) and 'New Blockly Tab' on the Editor's File menu.
  New Tab opens the normal code editor.
Includes Copy and Paste support across editor tabs.
Automatically gives Blockly editors a Path for ease of use.

--- a/index.html
+++ b/index.html
@@ -111,6 +111,8 @@
                                     <ul class="uk-nav uk-dropdown-nav">
                                         <li><button title="Adds a code editor panel" id="IDAddEditorBTN" class="uk-button uk-button-secondary uk-width-1-1 uk-height-1-1 uk-text-nowrap uk-text-left">+ Editor</button></li>
                                         <!-- <li class="uk-nav-divider"></li> -->
+                                        <li><button title="Adds a visual code editor panel" id="IDAddBlocklyEditorBTN" class="uk-button uk-button-secondary uk-width-1-1 uk-height-1-1 uk-text-nowrap uk-text-left">+ Blockly Editor</button></li>
+                                        <!-- <li class="uk-nav-divider"></li> -->
                                         <li><button title="Adds a bitmap builder panel (only one can be open at a time)" id="IDAddBitmapBuilder" class="uk-button uk-button-secondary uk-width-1-1 uk-height-1-1 uk-text-nowrap uk-text-left">+ Bitmap Builder</button></li>
                                         <!-- <li class="uk-nav-divider"></li> -->
                                         <li><button title="Adds a grayscale bitmap builder panel (only one can be open at a time)" id="IDAddGrayscaleBuilder" class="uk-button uk-button-secondary uk-width-1-1 uk-height-1-1 uk-text-nowrap uk-text-left" hidden>+ Grayscale Builder</button></li>
@@ -165,10 +167,13 @@
         <script src="uikit-3.7.3/js/uikit.min.js"></script>
         <script src="uikit-3.7.3/js/uikit-icons.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/uikit@3.7.3/dist/js/uikit-icons.min.js"></script>
+        <script src="js/blockly-9.2.0/blockly.min.js"></script>
+        <script src="js/blockly-9.2.0/python_compressed.js"></script>
         <script src="js/treejs/tree.js?version=20"></script>
         <script src="js/xterm-addon-fit/lib/xterm-addon-fit.js?version=20"></script>
         <script src="js/ace/ace.js?version=20" type="text/javascript" charset="utf-8"></script>
         <script src="js/ace/ext-language_tools.js?version=20"></script>
+        <script src="js/blocks.js?version=20"></script>
         <script src="js/editor_wrapper.js?version=20"></script>
         <script src="js/filesystem_wrapper.js?version=20"></script>
         <script src="js/dir_chooser.js?version=20"></script>
