--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
         <script src="https://cdn.jsdelivr.net/npm/uikit@3.7.3/dist/js/uikit-icons.min.js"></script>
         <script src="js/blockly-9.2.0/blockly.min.js"></script>
         <script src="js/blockly-9.2.0/python_compressed.js"></script>
+        <script src="js/jszip-3.10.1/jszip.min.js"></script>
         <script src="js/treejs/tree.js?version=20"></script>
         <script src="js/xterm-addon-fit/lib/xterm-addon-fit.js?version=20"></script>
         <script src="js/ace/ace.js?version=20" type="text/javascript" charset="utf-8"></script>
